fix overflow and add signUp link

--- a/css/style.css
+++ b/css/style.css
@@ -615,7 +615,7 @@ h1, h2, h3, h4, h5,
   .site-blocks-cover p {
     color: white;
     font-size: 1rem;
-    line-height: 1.5;
+    line-height: 1.2;
     font-weight: 300; }
     .site-blocks-cover p.lead {
       font-size: 20px; }
